# olist-analysis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_exploration.py  02_descriptive_analysis.py  03_data_processing.py  03_data_quality.py  04_sql_optimization.py
scripts/: download_data.py  load_to_db.py  process_data.py  validate_data.py
src/: __init__.py
src/analysis/: __init__.py  descriptive.py  preprocessing.py
src/data/: __init__.py  cleaner.py  loader.py  schemas.py  validator.py
src/database/: __init__.py  connection.py  schema.py  writer.py
src/utils/: __init__.py  config.py
tests/: __init__.py
