[project]
name = "olist-analysis"
version = "0.1.0"
description = "Analyse descriptive et prédictive du dataset Olist E-Commerce (Brésil, 2016-2018)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "marimo>=0.1.0",
    "kagglehub>=0.2.0",
    "sqlalchemy>=2.0.0",
    "plotly>=5.14.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "pandera>=0.18.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
